--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start": "concurrently --names \"Frontend,Backend\" -c \"bgBlue.bold,bgMagenta.bold\" \"cd frontend && npm i && npm start\" \"cd backend && npm i && nest start\"",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
